# ot-harjoitustyo

./: .env  .env.test  .gitignore  .pylintrc  README.md  pyproject.toml  tasks.py
data/: database.sqlite  notes.csv  test-database.sqlite  test-notes.csv
dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  testaus.md  tuntikirjanpito.md  vaatimusmaarittely.md
laskarit/viikko1/: README.md  gitlog.txt  komentorivi.txt
laskarit/viikko2/: kattavuusraportti  kuva  kuvakaappaus
laskarit/viikko2/maksukortti/: .coverage  pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: bensa_sekvenssikaavio.md  monopolikaavio.md  testi2.md
src/: build.py  config.py  index.py  initialize_database.py  sql_database.py
src/base/: diary.py  user.py
src/creating/: create_user.py
src/services/: note_service.py
src/tests/: create_note_test.py  create_user_test.py  diary_test.py  note_service_test.py  user_test.py
src/ui/: create_user_look.py  login_look.py  notes_look.py  ui.py
src/working/: create_note.py  create_user.py
